# infra

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Argcfile.sh  README.md  compose.sh  integration-test  pyproject.toml  robo.actions.yml  robo.yml
ansible/: .gitignore  production.yml  robo.yml  secrets.yml.enc  site.yml
bootstrap/: consul-policy-anonymous.hcl  consul-policy-vault.hcl  consul.hcl  generate_installer.sh  nomad.hcl  prepare.sh  vault-policy-pki-issue.hcl  vault.hcl
chess2/: README.md  config.json.example  docker-compose.prod.yml  docker-compose.yml
docs/: Storage.md  Upgrading.md  general.md  index.html  ssl.md  water.css  wireguard.md
driver/: bootstrap.sh  hetzner  hetzner-firewall.json  lima  lima-template.yml
example/: docker-compose.prod.yml  docker-compose.yml
freshrss/: README.md  docker-compose.dev.yml  docker-compose.yml
heimdall/: docker-compose.prod.yml  docker-compose.yml
infra/: .terraform.lock.hcl  default.tfvars  main.tf  master_user_data.yaml  terraform.tfvars
keycloak/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  forward-auth.env.example  keycloak.env
lima/: .gitignore  .terraform.lock.hcl  Argcfile.sh  admin-secrets.yml  authelia-users.yml  bootstrap.sh  development.key  main.tf
manifests/: authelia.tf  dashboard.tf  main.tf  traefik.tf  whoami.tf
monica/: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
nomad/: .terraform.lock.hcl  main.tf  traefik.nomad  whoami.nomad
portainer/: docker-compose.prod.yml  docker-compose.yml
private-server/: README.md  robo.yml  (+14 more)
(+170 files in other folders)
